commit 4 about.html has been commited

--- a/about.html
+++ b/about.html
@@ -9,5 +9,6 @@
 <body>
     <h1>this is about page here</h1>
     <h1>made some changes commit and then check</h1>
+    <h1> check here for git diff </h1>
 </body>
 </html>
