--- a/login.html
+++ b/login.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page </title>
+    <title>Login Page</title>
 </head>
 <body>
-    <h1>This is Home Page</h1>
-    <h1>This is for learning git </h1>
+    <form action="#">
+
+        Name <input placeholder="Name here" type="text" />        
+    </form>
 </body>
 </html>
-Rahul
